workspace = { members = [ "The-Rust-Programming-Language/common_concepts","The-Rust-Programming-Language/guessing_game", "The-Rust-Programming-Language/structure", "The-Rust-Programming-Language/understanding-ownership"] }
[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
